--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,3 +59,11 @@ flutter:
     - lib/assets/slide3.jpg
     - lib/assets/slide4.jpg
     - lib/assets/slide5.jpg
+    - lib/assets/alina.jpg
+    - lib/assets/alina2.jpg
+    - lib/assets/alina3.jpg
+    - lib/assets/alina4.jpg
+    - lib/assets/salon.jpg
+    - lib/assets/salon2.jpg
+    - lib/assets/salon3.jpg
+    - lib/assets/salon4.jpg
