updates 20.10.2024 update on home/main page +logo on google search

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,3 +67,8 @@ flutter:
     - lib/assets/salon2.jpg
     - lib/assets/salon3.jpg
     - lib/assets/salon4.jpg
+    - lib/assets/spange.jpg
+    - lib/assets/titan.jpg
+    - lib/assets/intradigitale.jpg
+    - lib/assets/ragade.jpg
+    - lib/assets/compozit.jpg
